--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root {
   --shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --myColor: #EDB506;
+  --header: #077295;
+  --myColor: #02222d;
 }
 
 *,
@@ -11,23 +12,28 @@
   margin: 0;
 }
 
-.container {
+body {
+  color: white;
+  background-color: var(--myColor);
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Open Sans', sans-serif;
-  display: grid;
-  grid-template-rows: 90vh 10vh;
-  /* height: 90vh; */
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 94vh;
 }
 
 .header {
   margin-top: 30px;
-  position: sticky;
   display: flex;
   width: 60%;
   height: 5vh;
   border-radius: 8px;
-  background-color: #232323;
+  background-color: var(--header);
   justify-self: center;
-  padding: 20px;
+  padding: 0 20px;
   color: white;
   justify-content: space-between;
   align-items: center;
@@ -42,10 +48,73 @@
   cursor: pointer;
 }
 
+/* Add Book Form */
+
+.add-form form {
+  z-index: 1;
+  position: sticky;
+  width: 250px;
+  background-color: rgb(232, 232, 232);
+  color: black;
+  border-radius: 12px;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 15vh;
+  gap: 16px;
+  transform: scale(0);
+}
+
+.add-form form.active {
+  transform: scale(1);
+}
+
+.add-form #form-title {
+  font-weight: 600;
+  font-size: 17px;
+  text-align: center;
+}
+
+.add-form input {
+  padding: 10px 8px;
+  font-size: 16px;
+  background-color: white;
+  border: none;
+  border-radius: 8px;
+}
+
+.add-form .read {
+  align-self: center;
+}
+
+.add-form .btn {
+  background-color: var(--header);
+  color: white;
+  border: none;
+  border-radius: 8px;
+  padding: 10px 0px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.overlay.active {
+  display: block;
+}
+
 /* Footer */
 
 .footer {
-  /* grid-row: 2 / -1; */
+  margin-top: auto;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -55,7 +124,7 @@
 }
 
 .fa-github {
-  color: black;
+  color: white;
   font-size: 22px;
   transition: transform 0.9s ease-in-out;
 }
