--- a/style.css
+++ b/style.css
@@ -132,3 +132,10 @@ body {
 .fa-github:hover {
   transform: rotate(360deg) scale(1.4);
 }
+
+@media only screen and (max-device-width: 768px) {
+  .header {
+    width: 80%;
+    gap: 0px;
+  }
+}
